# numfmt

./: Cargo.toml  README.md  license.txt  links.txt
src/: lib.rs  main.rs
tests/: df_dump.txt  df_expected.txt  ls_l_dump.txt  ls_l_expected.txt  ls_lh_dump.txt  ls_lh_expected.txt  tests.rs
