[package]
name = "numfmt"
version = "0.1.0"
authors = ["mifour <dufour.thomas@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
exitcode = "1.1.2"
predicates = "1.0.8"
assert_cmd = "1.0.5"
regex = "1.5.4"
